# Functional_Webhook

./: CHANGELOG.md  Functional-Webhook.cabal  README.md  expected_payload_formatt.txt  package.yaml  run_webhook.sh  stack.yaml  test_connection.py  test_webhook.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
app/: Main.hs
