cabal-version:      3.4
name:               Functional-Webhook
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             RodrigoAnciaes
maintainer:         rodrigoanpatelli@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Functional-Webhook
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.14 && < 5,
                      scotty >= 0.12 && < 1,
                      aeson >= 2.0 && < 3,
                      text >= 1.2 && < 3,
                      bytestring >= 0.11 && < 1,
                      http-types >= 0.12 && < 1,
                      http-conduit >= 2.3 && < 3,
                      stm >= 2.5 && < 3,
                      containers >= 0.6 && < 1
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, DeriveGeneric, DuplicateRecordFields